# android-reader

./: install.sh
android/app/: build.gradle
android/app/src/androidTest/java/dev/vstelt/reader/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: style.css
android/app/src/main/java/dev/vstelt/reader/: Article.java  ArticleActivity.java  ArticleAdapter.java  Feed.java  FeedActivity.java  FeedAdapter.java  MainActivity.java  RSSReader.java  Reader.java  SyncService.java
android/app/src/main/res/drawable/: ic_plus.xml
android/app/src/main/res/layout/: activity_article.xml  activity_feed.xml  activity_main.xml  article_card.xml  feed_card.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/dev/vstelt/reader/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: db.rs  lib.rs
rust/src/sql/: create_article.sql  create_feed.sql  get_feeds.sql  get_unread.sql  init_db.sql  update_modified.sql
