[package]
name = "reader"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"

[lib]
name = "reader"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2"
reqwest = { version="0.11", features=["blocking"] }
sqlite = "0.26"
chrono = "0.4"
jni = { version="0.19", default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
android_log = "0.1"
log = "0.4"
